--- a/src/app/admin-alunos/admin-alunos.component.scss
+++ b/src/app/admin-alunos/admin-alunos.component.scss
@@ -63,11 +63,14 @@ h2 {
 .mat-form-field {
   padding-left: 10%;
 }
-
+a {
+  padding-left: 10%;
+  font-size: 12px;
+}
 
 .table{
   width: 100%;
-  // margin: 15% auto;
+  margin-top: 10px;
 }
 
 .data-table {
