--- a/src/app/admin-classes/admin-classes.component.scss
+++ b/src/app/admin-classes/admin-classes.component.scss
@@ -1,20 +1,23 @@
 h2 {
-    padding-left: 15%;
+    padding-left: 10%;
 }
 
 .mat-form-field {
-    padding-left: 15%;
+    padding-left: 10%;
 }
 
-
+a {
+  padding-left: 10%;
+  font-size: 12px;
+}
 .table{
     width: 100%;
-    // margin: 15% auto;
+    margin-top: 10px;
 }
 
 .data-table {
     width: 40%;
-    margin-left: 15%;
+    margin-left: 10%;
 }
 
 .w-25 {
@@ -24,6 +27,6 @@ h2 {
 .mat-raised-button {
     background-color: #FFD700;
     color: #000;
-    margin-left: 15%;
+    margin-left: 10%;
     margin-top: 2%;
 }
