--- a/src/app/admin-funcionarios-dialog/admin-funcionarios-dialog.component.html
+++ b/src/app/admin-funcionarios-dialog/admin-funcionarios-dialog.component.html
@@ -11,8 +11,8 @@
       <mat-form-field appearance="legacy" class="col-lg-5">
         <mat-label>Tipo</mat-label>
         <mat-select formControlName="isAdmin">
-          <mat-option value="True">Gerente</mat-option>
-          <mat-option value="False">Funcionário</mat-option>
+          <mat-option value=true>Gerente</mat-option>
+          <mat-option value=false>Funcionário</mat-option>
         </mat-select>
         <!--        <mat-error *ngIf="formInstructor.invalid">{{getErrorMessage()}}</mat-error>-->
       </mat-form-field>
