--- a/src/app/alunos-teoricos/alunos-teoricos.component.scss
+++ b/src/app/alunos-teoricos/alunos-teoricos.component.scss
@@ -1,7 +1,10 @@
 h2 {
     padding-left: 10%;
 }
-
+a {
+  padding-left: 10%;
+  font-size: 12px;
+}
 .mat-form-field {
     padding-left: 10%;
 }
@@ -9,7 +12,7 @@ h2 {
 
 .table{
     width: 100%;
-    // margin: 15% auto;
+    margin-top: 10px;
 }
 
 .data-table {
@@ -52,7 +55,6 @@ td{
   margin-left: 10%;
   margin-top: 3%;
   transition: transform .4s;
-
 }
 
 .gray-element{
