--- a/src/app/check-franchise/check-franchise.component.html
+++ b/src/app/check-franchise/check-franchise.component.html
@@ -1,3 +1,4 @@
+<div class="bg" style="background-image: url('assets/bg.png');">
 <div class="container">
   <mat-card>
     <mat-card-content>
@@ -9,7 +10,8 @@
             <mat-option [value]="i.id">{{i.name}}</mat-option>
           </div>
         </mat-select>
-        <button mat-raised-button color="primary">Continuar</button>
+<!--        <button mat-raised-button color="primary">Continuar</button>-->
+        <button mat-flat-button style="background-color: #FFD700;" type="submit" class="button">Continuar</button>
       </form>
     </mat-card-content>
   </mat-card>
