--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,3 +1,4 @@
+<div class="bg" style="background-image: url('assets/bg.png');">
 <div class="container">
   <mat-card>
     <mat-card-content>
@@ -18,7 +19,7 @@
             Por favor, informe uma senha válida.
           </mat-error>
         </mat-form-field>
-        <button mat-raised-button color="primary">Entrar</button>
+        <button mat-flat-button style="background-color: #FFD700;">Entrar</button>
       </form>
     </mat-card-content>
   </mat-card>
