--- a/src/app/traffic-ticket/traffic-ticket.component.scss
+++ b/src/app/traffic-ticket/traffic-ticket.component.scss
@@ -1,20 +1,25 @@
 h2 {
-  padding-left: 15%;
+  padding-left: 10%;
+}
+
+a {
+  padding-left: 10%;
+  font-size: 12px;
 }
 
 .mat-form-field {
-  padding-left: 15%;
+  padding-left: 10%;
 }
 
 
 .table{
+  margin-top: 10px;
   width: 100%;
-  // margin: 15% auto;
 }
 
 .data-table {
   width: 50%;
-  margin-left: 15%;
+  margin-left: 10%;
 }
 
 button {
@@ -38,7 +43,7 @@ button {
 .mat-raised-button {
   background-color: #FFD700;
   color: #000;
-  margin-left: 15%;
+  margin-left: 10%;
   margin-top: 3%;
 }
 
