--- a/src/app/admin-classes/admin-classes.component.html
+++ b/src/app/admin-classes/admin-classes.component.html
@@ -1,6 +1,7 @@
 <div>
-    <h2>Turmas</h2>
-    <div class="mat-elevation-z8 data-table">
+  <h2>Turmas</h2>
+  <a>Última Atualização feita por: {{this.hourChange?.classesAdminPeople}} em {{this.hourChange?.classesAdmin | date:"dd-MM-yyyy"}}</a>
+  <div class="mat-elevation-z8 data-table">
         <table mat-table matSort class="table" [dataSource]="dataSource">
             <ng-container matColumnDef="N°">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header> N° </th>
