--- a/src/app/admin-instrutor/admin-instrutor.component.html
+++ b/src/app/admin-instrutor/admin-instrutor.component.html
@@ -1,4 +1,5 @@
 <h2>Administração de Instrutor</h2>
+<a>Última Atualização feita por: {{this.hourChange?.instructorAdminPeople}} em {{this.hourChange?.instructorAdmin | date:"dd-MM-yyyy"}}</a>
 <div fxLayout fxLayoutAlign="center center">
   <mat-form-field fxFlex="40%">
     <input matInput type="text" (keyup)="doFilter($event.target.value)" placeholder="Filtrar Instrutor">
