--- a/src/app/admin-tabelas-praticas/admin-tabelas-praticas.component.html
+++ b/src/app/admin-tabelas-praticas/admin-tabelas-praticas.component.html
@@ -1,12 +1,8 @@
 <div>
   <h2>Tabelas Práticas</h2>
+  <a>Última Atualização feita por: {{this.hourChange?.practicalAdminPeople}} em {{this.hourChange?.practicalAdmin | date:"dd-MM-yyyy"}}</a>
   <div class="mat-elevation-z8 data-table">
     <table mat-table matSort class="table" [dataSource]="dataSource">
-      <ng-container matColumnDef="id">
-        <th mat-header-cell *matHeaderCellDef> Id </th>
-        <td mat-cell *matCellDef="let practicalTable"> {{practicalTable.id}} </td>
-      </ng-container>
-
       <ng-container matColumnDef="name">
         <th mat-header-cell *matHeaderCellDef> Nome </th>
         <td mat-cell *matCellDef="let practicalTable"> {{practicalTable.name}}
@@ -19,20 +15,11 @@
         </td>
       </ng-container>
 
-      <ng-container matColumnDef="update">
-        <th class="w-25" mat-header-cell *matHeaderCellDef> Atualizar </th>
-        <td mat-cell *matCellDef="let franchise">
-          <button mat-icon-button (click)="openDeleteDialog(franchise)">
-            <mat-icon>delete</mat-icon>
-          </button>
-        </td>
-      </ng-container>
-
       <ng-container matColumnDef="delete">
         <th class="w-25" mat-header-cell *matHeaderCellDef> Deletar </th>
         <td mat-cell *matCellDef="let franchise">
           <button mat-icon-button (click)="openDeleteDialog(franchise)">
-            <mat-icon>edit</mat-icon>
+            <mat-icon>delete</mat-icon>
           </button>
         </td>
       </ng-container>
