--- a/src/app/instrutor-teorico/instrutor-teorico.component.html
+++ b/src/app/instrutor-teorico/instrutor-teorico.component.html
@@ -1,6 +1,7 @@
-<h3>Aulas Cadastradas por Instrutor</h3>
+<h2>Aulas Cadastradas por Instrutor</h2>
+<a>Última Atualização feita por: {{this.hourChange?.instructorPeople}} em {{this.hourChange?.instructor | date:"dd-MM-yyyy"}}</a>
 
-<div class="mat-elevation-z8 data-table" *ngIf="this.instructor.type == 'Teórico' || this.instructor.type == 'Ambos'">
+<div class="mat-elevation-z8 data-table" *ngIf="this.instructor?.type == 'Teórico' || this.instructor?.type == 'Ambos'">
     <h4>{{this.instructor.name}} - Aulas Teóricas</h4>
 
     <table mat-table matSort class="table" [dataSource]="dataSourceT">
@@ -31,7 +32,7 @@
     <h5>Total de Aulas: {{this.tSum}}</h5>
 </div>
 
-<div class="mat-elevation-z8 data-table" *ngIf="this.instructor.type == 'Prático' || this.instructor.type == 'Ambos'">
+<div class="mat-elevation-z8 data-table" *ngIf="this.instructor?.type == 'Prático' || this.instructor?.type == 'Ambos'">
   <h4>{{this.instructor.name}} - Aulas Práticas</h4>
 
   <table mat-table matSort class="table" [dataSource]="dataSourceP">
