--- a/src/app/login/login.component.scss
+++ b/src/app/login/login.component.scss
@@ -3,15 +3,13 @@ mat-card {
   margin: 2em auto;
   text-align: center;
 }
-
-.container {
-  //display: flex;
-  //flex-direction: row;
-  //justify-content: center;
-  //align-items: center;
-  //width: 400px
+.bg {
+  width: 100%;
+  height: 100%;
 }
-
+.container {
+  padding-top: 10%;
+}
 mat-form-field {
   display: block;
 }
