--- a/src/app/main-nav/main-nav.component.scss
+++ b/src/app/main-nav/main-nav.component.scss
@@ -16,6 +16,12 @@
   z-index: 1;
 }
 
+.change-franchise {
+  margin: 10px;
+  font-size: 17px;
+  cursor: pointer;
+}
+
 .nav {
     background-color: #FFD700;
 }
@@ -39,7 +45,7 @@ mat-expansion-panel-header:hover {
     background-color: #FFD700;
 }
 
-h4 {
+h4{
     margin-bottom: .5rem;
     font-family: inherit;
     font-weight: 700;
@@ -48,11 +54,16 @@ h4 {
     text-align: left!important;
     white-space: normal!important;
     width: 100%!important;
-    margin-left: 10px;
+    margin-left: 25px;
     font-size: 1rem;
     line-height: 1.5;
 }
 
+h5 {
+  margin-left: 25px;
+}
+
 .logout {
-    font-size: 17px;
+  font-size: 17px;
+  cursor: pointer;
 }
