--- a/src/app/admin-alunos/admin-alunos.component.html
+++ b/src/app/admin-alunos/admin-alunos.component.html
@@ -55,7 +55,7 @@
   </table>
 </div>
 
-<button mat-raised-button color="primary" type="submit" (click)="openDialog('', 'add')" class="button">Adicionar novo aluno</button>
+<button mat-flat-button color="primary" type="submit" (click)="openDialog('', 'add')" class="button">Adicionar novo aluno</button>
 
 
 
