--- a/src/app/admin-instrutor/admin-instrutor.component.html
+++ b/src/app/admin-instrutor/admin-instrutor.component.html
@@ -43,4 +43,4 @@
   </table>
 </div>
 
-<button mat-raised-button color="primary" type="submit" (click)="openDialog()" class="button">Adicionar novo instrutor</button>
+<button mat-flat-button color="primary" type="submit" (click)="openDialog()" class="button">Adicionar novo instrutor</button>
