--- a/src/app/admin-instrutor/admin-instrutor.component.scss
+++ b/src/app/admin-instrutor/admin-instrutor.component.scss
@@ -74,6 +74,16 @@ button {
   background-color: transparent;
   box-shadow: none;
 }
+.mat-flat-button {
+  background-color: #FFD700;
+  color: #000;
+  margin-left: 10%;
+  margin-top: 2%;
+  transition: transform .4s;
+}
+.mat-flat-button:hover {
+  transform: scale(1.1);
+}
 
 .w-25 {
   width: 25px;
