--- a/src/app/traffic-ticket/traffic-ticket.component.html
+++ b/src/app/traffic-ticket/traffic-ticket.component.html
@@ -43,6 +43,6 @@
 
     </table>
   </div>
-  <button mat-raised-button color="primary" (click)='openDialog()' class="button">Adicionar nova multa</button>
+  <button mat-flat-button color="primary" (click)='openDialog()' class="button">Adicionar nova multa</button>
 
 </div>
