--- a/src/app/admin-classes/admin-classes.component.html
+++ b/src/app/admin-classes/admin-classes.component.html
@@ -43,7 +43,7 @@
     </div>
 
     <div class="form-element">
-        <button mat-raised-button color="primary" type="submit" class="button" (click)="openDialog(classes, 'add')">Adicionar Turma</button>
+        <button mat-flat-button color="primary" type="submit" class="button" (click)="openDialog(classes, 'add')">Adicionar Turma</button>
     </div>
 </div>
 
