--- a/src/app/alunos-teoricos/alunos-teoricos.component.html
+++ b/src/app/alunos-teoricos/alunos-teoricos.component.html
@@ -1,6 +1,6 @@
 <div>
     <h2>{{this.class?.name}}: {{this.class?.shift}}</h2>
-    <a>Última Atualização feita por: {{this.hourChange?.classesPeople}} em {{this.hourChange?.classes | date:"dd-MM-yyyy"}}</a>
+    <a>Última Atualização feita por: {{this.city?.classesPeople}} em {{this.city?.classes | date:"dd-MM-yyyy"}}</a>
 
     <div fxLayout fxLayoutAlign="center center">
         <mat-form-field fxFlex="40%">
