--- a/src/app/instrutor-teorico/instrutor-teorico.component.html
+++ b/src/app/instrutor-teorico/instrutor-teorico.component.html
@@ -1,5 +1,5 @@
 <h2>Aulas Cadastradas por Instrutor</h2>
-<a>Última Atualização feita por: {{this.hourChange?.instructorPeople}} em {{this.hourChange?.instructor | date:"dd-MM-yyyy"}}</a>
+<a>Última Atualização feita por: {{this.city?.instructorPeople}} em {{this.city?.instructor | date:"dd-MM-yyyy"}}</a>
 
 <div class="mat-elevation-z8 data-table" *ngIf="this.instructor?.type == 'Teórico' || this.instructor?.type == 'Ambos'">
     <h4>{{this.instructor.name}} - Aulas Teóricas</h4>
