--- a/src/app/tabela-pratica/tabela-pratica.component.html
+++ b/src/app/tabela-pratica/tabela-pratica.component.html
@@ -1,7 +1,7 @@
 <div>
     <h2>{{this.table?.name}}</h2>
     <h4>Instrutor Relacionado: {{this.instructor?.name}}</h4>
-    <a>Última Atualização feita por: {{this.hourChange?.practicalTablePeople}} em {{this.hourChange?.practicalTable | date:"dd-MM-yyyy"}}</a>
+    <a>Última Atualização feita por: {{this.city?.practicalTablePeople}} em {{this.city?.practicalTable | date:"dd-MM-yyyy"}}</a>
   <div class="mat-elevation-z8 data-table">
     <table mat-table matSort class="table" [dataSource]="dataSource">
 
