--- a/src/app/traffic-ticket/traffic-ticket.component.html
+++ b/src/app/traffic-ticket/traffic-ticket.component.html
@@ -1,6 +1,6 @@
 <div>
   <h2>Multas</h2>
-   <a>Última Atualização feita por: {{this.hourChange?.trafficTicketPeople}} em {{this.hourChange?.trafficTicket | date:"dd-MM-yyyy"}}</a>
+   <a>Última Atualização feita por: {{this.city?.trafficTicketPeople}} em {{this.city?.trafficTicket | date:"dd-MM-yyyy"}}</a>
   <div class="mat-elevation-z8 data-table">
     <table mat-table matSort class="table" [dataSource]="dataSource">
       <ng-container matColumnDef="id">
