--- a/src/app/admin-tabelas-praticas/admin-tabelas-praticas.component.html
+++ b/src/app/admin-tabelas-praticas/admin-tabelas-praticas.component.html
@@ -1,6 +1,6 @@
 <div>
   <h2>Tabelas Práticas</h2>
-  <a>Última Atualização feita por: {{this.hourChange?.practicalAdminPeople}} em {{this.hourChange?.practicalAdmin | date:"dd-MM-yyyy"}}</a>
+  <a>Última Atualização feita por: {{this.city?.practicalAdminPeople}} em {{this.city?.practicalAdmin | date:"dd-MM-yyyy"}}</a>
   <div class="mat-elevation-z8 data-table">
     <table mat-table matSort class="table" [dataSource]="dataSource">
       <ng-container matColumnDef="name">
