--- a/src/app/dialog-box/dialog-box.component.html
+++ b/src/app/dialog-box/dialog-box.component.html
@@ -1,7 +1,7 @@
 <div *ngIf="type == 'Student'">
     <h1 mat-dialog-title>Atualizar aulas da matéria</h1>
     <div mat-dialog-content>
-      <mat-form-field *ngIf="action != 'Delete'; else elseTemplate">
+      <mat-form-field>
         <input *ngIf="index == 0" placeholder="Atualizar aulas" matInput [(ngModel)]="obj.defensiveDriving">
         <input *ngIf="index == 1" placeholder="Atualizar aulas" matInput [(ngModel)]="obj.legislation">
         <input *ngIf="index == 2" placeholder="Atualizar aulas" matInput [(ngModel)]="obj.mechanics">
