--- a/src/app/lines-dialog/lines-dialog.component.html
+++ b/src/app/lines-dialog/lines-dialog.component.html
@@ -1,6 +1,6 @@
 <h1 mat-dialog-title>Atualizar valor</h1>
   <div mat-dialog-content>
-    <mat-form-field *ngIf="action != 'Delete'; else elseTemplate">
+    <mat-form-field>
       <input *ngIf="this.type == 'student'" placeholder="Aluno" matInput [(ngModel)]="obj">
       <input *ngIf="this.type == 'km'" placeholder="Quilometragem" matInput [(ngModel)]="obj">
       <input *ngIf="this.type == 'hour'" placeholder="Hora da Aula" matInput [(ngModel)]="obj">
