--- a/src/app/admin-alunos-dialog/admin-alunos-dialog.component.html
+++ b/src/app/admin-alunos-dialog/admin-alunos-dialog.component.html
@@ -46,7 +46,7 @@
 
         <mat-form-field appearance="legacy" class="col-lg-5">
           <mat-label>Email</mat-label>
-          <input matInput formControlName="email" required>
+          <input matInput formControlName="email">
         </mat-form-field>
 
         <mat-form-field appearance="legacy" class="col-lg-5">
