--- a/src/app/check-franchise/check-franchise.component.html
+++ b/src/app/check-franchise/check-franchise.component.html
@@ -1,4 +1,4 @@
-<div class="bg" style="background-image: url('assets/bg.png');">
+<div class="bg" style="background-image: url('https://autoescolaalbuquerque.com/images/bg.png');">
 <div class="container">
   <mat-card>
     <mat-card-content>
